tests/functional/lang/eval-fail-zipAttrsWith-1.err.exp
error:
       … while calling the 'zipAttrsWith' builtin
         at /pwd/lang/eval-fail-zipAttrsWith-1.nix:1:1:
            1| builtins.zipAttrsWith [ ] [ 1 ]
             | ^
            2|

       … while evaluating the first argument passed to builtins.zipAttrsWith

       error: expected a function but found a list: [ ]
